--- a/client/web/index.html
+++ b/client/web/index.html
@@ -26,6 +26,8 @@
   <meta name="apple-mobile-web-app-title" content="client">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
